# minitune

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: accelerate_fsdp_a40.yaml
docs/infrastructure/: distributed_strategies.md
docs/user_guide/: advanced_sft.md
examples/: 01_run_sft.py  02_run_dpo.py  02_run_ppo.py  03_run_inference.py  04_run_sft_with_profiling.py
examples/data/: rl_prompts.jsonl  sft_data.jsonl
examples/under_the_hood/: ddp_sft.py
minitune/: config.py  data.py  inference.py  losses.py  sft.py
minitune/autotuner/: README.md  engine.py  strategies.py  trial.py
minitune/rl/: core.py  dpo.py  ppo.py
minitune/utils/: profiling.py
tests/: dummy_config.yaml  test_sft_workflow.py
