[project]
name = "minitune"
version = "0.1.0"
description = "A transparent and minimal framework for post-training LLMs."
authors = [{ name = "Pranoy Panda", email = "1997pranoy@email.com" }]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.29.0",
    "peft>=0.10.0",
    "omegaconf>=2.3.0",
    "vllm>=0.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tensorboard>=2.16.0",
    "flash-attn>=2.5.0",
    "scikit-optimize">=0.10.2,
    "bitsandbytes"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]